--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "peerjs": "^1.5.5",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
